--- a/templates/index.html
+++ b/templates/index.html
@@ -1,105 +1,87 @@
-<html>	
+
+<html>
    <head>
-	<style>
-		body{
-			margin: 0;
-			font-family: Arial, Helvetica, sans-serif;
-			background-color: slategrey;
-		}
-		.content{
-			border: 3px solid #f1f1f1;
-  			font-family: Arial;
-		}
-		.content-header{
-			padding: 20px;
-			background-color: #f1f1f1;
-		}
-		.main{
-			width: 75%;
-			margin-top: 2rem;
-			display: flex;
-			margin: auto;
-			justify-content: center;
-			background-color: lightcyan;
-		}
-		.error{
-			color: white;
-			background: indianred !important;
-			padding: 15px !important;
-			border-radius: 0 !important;
-			position: relative;
-			display: inline-block !important;
-			box-shadow: 1px 1px 1px #aaaaaa;
-			margin-top: 10px;
-		}
-		.download-link {
-			width: 100%;
-		}
-		.download-link a {
-			text-decoration: none;
-		}
-
-		input[type=text], input[type=submit] {
-		  width: 100%;
-		  padding: 12px;
-		  margin: 8px 0;
-		  border: 1px solid #ccc;
-		}
-
-		input[type=submit] {
-		  background-color: #4CAF50;
-		  color: white;
-		  border: none;
-		}
-
-		input[type=submit]:hover {
-		  opacity: 0.8;
-		}
-
-		.form-inline button {
-		  padding: 10px 20px;
-		  background-color: dodgerblue;
-		  border: 1px solid #ddd;
-		  color: white;
-		  cursor: pointer;
-		}
-
-	</style>
+	   <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="../static/css/style.css">
    </head>
    <body>
-	<div class="main">
+   <div class="header">
+	   <a href="/"><img src="../static/images/phraseable.png" height="70px"/></a>
+   </div>
+   <div class="main">
+
 		<div class="content">
 			<div class="content-header">
-				<h2>Extracting Specific Pages From a PDF</h2>
-    			<p>Lorem ipsum text about why you should subscribe to our newsletter blabla. Lorem ipsum text about why you should subscribe to our newsletter blabla.</p>
+				<h2><em>Phraseable</em></h2>
+    			<p>Extracting Pages from pdf using python and flask.</p>
 			</div>
-			<div class="form-control">
-				{% if isFileSubmitted == False %}
-					<form action = "/uploader" method = "POST" enctype = "multipart/form-data">
-						<input type = "file" name = "file" /><br/>
-						<div class="form-inline">
-							<label for="start">Start</label>
-							<input type = "text" name = "start" placeholder="start page" required/>
-							<label for="end">End</label>
-							<input type = "text" name = "end" placeholder="end page" required/>
-						</div>
-						<input id="submit-btn" type = "submit"/><br/>
-					</form>
-					{% if error is defined %}
-					<div class="error">
-						{{ error }}
-					</div>
-					{% endif %}
-				{% endif %}
-			</div>
+		</div>
 
-		{% if isFileSubmitted == True %}
-			<div class="download-link">
-				<a href="/download?file={{fileName}}"> Download File</a>
+	<div class="tab">
+	  <button class="tablinks" onclick="openCity(event, 'Multiple Pages')" >Multiple Pages</button>
+	  <button class="tablinks" onclick="openCity(event, 'Single Pages')">Single Pages</button>
+	</div>
+
+	<div id="Multiple Pages" class="tabcontent">
+	  <h3>Multiple Pages</h3>
+		<div class="form-control">
+		{% if isFileSubmitted == False %}
+			<form action = "/multi" method = "POST" enctype = "multipart/form-data">
+				<input type = "file" name = "file" /><br/>
+				<div class="form-inline">
+					<label for="start">Start</label>
+					<input id="start" type = "text" name = "start" placeholder="start page" required/>
+					<label for="end">End</label>
+					<input id="end" type = "text" name = "end" placeholder="end page" required/>
+				</div>
+				<input id="submit-btn" type = "submit"/><br/>
+			</form>
+			{% if error is defined %}
+			<div class="error">
+				{{ error }}
 			</div>
+			{% endif %}
 		{% endif %}
 
 		</div>
 	</div>
+
+	<div id="Single Pages" class="tabcontent">
+	  <h3>Single Pages</h3>
+	  <div>
+		  <form action="/single" method="POST" enctype="multipart/form-data">
+			  <input type="file" name="pdf"/>
+			  <input type="submit"/>
+		  </form>
+	  </div>
+	</div>
+
+	   	{% if isFileSubmitted == True %}
+			<div class="download-link">
+				<p>Download your processed File here:</p>
+				<a href="/download?file={{fileName}}"> Download File</a>
+			</div>
+		{% endif %}
+
+	</div>
+   <script>
+		function openCity(evt, cityName) {
+		  var i, tabcontent, tablinks;
+		  tabcontent = document.getElementsByClassName("tabcontent");
+		  for (i = 0; i < tabcontent.length; i++) {
+			tabcontent[i].style.display = "none";
+		  }
+		  tablinks = document.getElementsByClassName("tablinks");
+		  for (i = 0; i < tablinks.length; i++) {
+			tablinks[i].className = tablinks[i].className.replace(" active", "");
+		  }
+		  document.getElementById(cityName).style.display = "block";
+		  evt.currentTarget.className += " active";
+		}
+
+		// Get the element with id="defaultOpen" and click on it
+		document.getElementById("defaultOpen").click();
+	</script>
+
    </body>
 </html>
